<resources>
    <string name="app_name">GreenRoots</string>
    <string name="AppName">GreenRoots</string>
    <string name="welcome">Bienvenidos</string>
    <string name="inicioMenu">Inicio</string>
    <string name="productosMenu">Productos</string>
    <string name="carritoMenu">Carrito</string>
    <string name="perfilMenu">Perfil</string>
    <string name="categoriaMenu">Categorias</string>
    <string name="navigation_close">close</string>
    <string name="navigation_open">abrir\n</string>
    <string name="appName">GreenRoots</string>
    <string name="nameCreater">Yeison David Rodriguez Rodriguez</string>
    <string name="textRegisterHome">Regístrate</string>
    <string name="textRegister">Regístrar</string>
    <string name="textRecoveryPassword">Recuperar</string>
    <string name="textBeginHome">Comienza</string>
    <string name="textSignInLogin">Ingresar</string>
    <string name="textRecoverPasswordLogin">Recuperar Tu Contraseña</string>
    <string name="textWelcomeHome">Inicia una nueva aventura con MessagesFlash y descubre una nueva forma de ver el mundo</string>
    <string name="textWelcomeLogin">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="textGoogleLogin">Ingresa con Google</string>
    <string name="textNoCountLogin">¿No tienes cuenta?</string>
    <string name="textYesCountRegister">¿Ya tienes cuenta?</string>
    <string name="textInstructiveRegister">Rellena los siguientes datos</string>
    <string name="textConfirmPasswordRegister">Confirmar contraseña</string>
    <string name="textPasswordRegister">Contraseña</string>
    <string name="textPhoneRegister">Telefono</string>
    <string name="textEmailRegister">Email</string>
    <string name="textLastNameRegister">Apellidos</string>
    <string name="textNameRegister">Nombres</string>
    <string name="textTermsRegister">Acepto los términos y condiciones</string>
    <string name="textInstruvtiveRecoveryPassword">Por favor digitar correo electronico para la recuperación de la contraseña</string>
    <string name="textProfile">Editar</string>
    <string name="textGoBack">Regresar</string>
    <string name="TittleFragmentProdructos">Productos</string>
    <string name="nameProduct1">Cepillo para cabello</string>
    <string name="priceProduct1">$15.000</string>
    <string name="descriptionProduct1">Descripción: Cepillo dental eco-amigable con mango de bambú biodegradable y cerdas suaves. Alternativa sostenible que limpia eficazmente mientras reduce la huella de plástico en el planeta.</string>
    <string name="amountProduct1">Cantidad: 4</string>
    <string name="amountProduct2">Cantidad: 7</string>
    <string name="textAddCart">Añadir a carrito</string>
    <string name="amountProduct3">Cantidad: 7</string>
    <string name="nameProduct2">Camisa</string>
    <string name="nameProduct3">Sombras</string>
    <string name="priceProduct5">21.000</string>
    <string name="nameProduct5">Acuarelas</string>
    <string name="nameProduct4">Cuadernos</string>
    <string name="priceProduct4">13.000</string>
    <string name="priceProduct3">30.000</string>
    <string name="priceProduct2">27.000</string>
    <string name="amountProduct5">Cantidad: 9</string>
    <string name="TittleFragmentProfile">Perfil</string>
    <string name="TittleFragmentCategorias">Categorias</string>
    <string name="amountProductsCategory1">No. de productos: 1</string>
    <string name="nameCategory1">Electrónica</string>
    <string name="nameCategory2">Ropa</string>
    <string name="nameCategory3">Hogar</string>
    <string name="nameCategory4">Deportes</string>
    <string name="nameCategory5">Accesorios</string>
    <string name="tittleFragmentCategorySports">Fragment de categoria deportes</string>
    <string name="tittleFragmentCategoryAccessories">Fragment de categoria accesorios</string>
    <string name="tittleFragmentCategoryElectronics">Fragment de categoria electronica</string>
    <string name="tittleFragmentCategoryHome">Fragment de categoria hogar</string>
    <string name="tittleFragmentCategoryClothes">Fragment de categoria ropa</string>
    <string name="textWelcomeStart">Bienvenido a GreenRoots!</string>
    <string name="textDescriptionAppStart">GreenRoots es una tienda ecológica en línea que ofrece productos sostenibles y amigables con el medio ambiente. Conecta a consumidores responsables con marcas y productores comprometidos con prácticas éticas.</string>
    <string name="textEmptyCart">Tu carrito está vacío</string>
    <string name="textTotalDefect">Total: $0</string>
    <string name="textBuy">Realizar compra</string>
    <string name="textDelete">Eliminar</string>
    <string name="plusSign">+</string>
    <string name="numDefectAmount">1</string>
    <string name="minusSign">-</string>
    <string name="TittleFragmentCarrito">Carrito de compras</string>
    <string name="TittleFragmentEditProfile">Editar Perfil</string>
</resources>