<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TittleFragmentCarrito"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:fontFamily="serif"
            android:gravity="center"
            android:layout_marginBottom="20sp"
            />

        <TextView
            android:id="@+id/tvEmptyCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEmptyCart"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="32dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/cartItemsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </ScrollView>

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/textTotalDefect"
            android:gravity="end"
            android:padding="8dp"/>

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textBuy"
            android:backgroundTint="@color/green"
            app:strokeColor="@color/orange"
            app:strokeWidth="3dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>