<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/rounded_background"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minusSign"
            android:minWidth="48dp"
            android:backgroundTint="@color/green"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"
            />

        <TextView
            android:id="@+id/tvProductAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/numDefectAmount"
            />

        <Button
            android:id="@+id/btnIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusSign"
            android:minWidth="48dp"
            android:backgroundTint="@color/green"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnRemoveProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDelete"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/green"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"
            />
    </LinearLayout>
</LinearLayout>