<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TittleFragmentProfile"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="20sp"
            android:textColor="@color/green"
            android:fontFamily="serif"
            />


        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rounded_corners"
            android:clipToOutline="true"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/icon_user" />

        <TextView
            android:id="@+id/labelNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:fontFamily="serif"
            android:text="@string/textNameRegister"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="serif"
            android:text="@string/textNameRegister"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/labelLastNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="serif"
            android:text="@string/textLastNameRegister"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/tvLastNameProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="serif"
            android:text="@string/textLastNameRegister"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/labelEmailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="serif"
            android:text="@string/textEmailRegister"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/tvEmailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="serif"
            android:text="@string/textEmailRegister"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/labelPhoneProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="serif"
            android:text="@string/textPhoneRegister"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            />


        <TextView
            android:id="@+id/tvPhoneProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="serif"
            android:text="@string/textPhoneRegister"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/buttonEditProfileAc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="30dp"
            android:backgroundTint="@color/green"
            android:fontFamily="serif"
            android:text="@string/textProfile"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:strokeColor="@color/orange"
            app:strokeWidth="3dp"
            />

    </LinearLayout>

</ScrollView>